# WaVeS

./: .gitignore  .pre-commit-config.yaml  MyAudioUtilities.py  README.md  WaVeS.spec  build.bat  config_manager.py  control.py  default_mapping.txt  main.py  mapping.txt  mapping_manager.py  pyproject.toml  pyproject.toml.old  pyrightconfig.json  requirements.txt  session.py  session_manager.py  sessions.py  tray_icon.py  utils.py  volume_manager.py  volume_thread.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/WORKFLOWS/: release.yml
.github/workflows/: release.yml  run_tests.yml  upload.yml
config/: __init__.py  config_manager.py
core/: tray_icon.py  volume_thread.py
mapping/: __init__.py  mapping_manager.py  mapping_protocol.py
microcontroller/: microcontroller_protocol.py
protocols/: __init__.py  config_protocol.py  mapping_protocol.py  session_protocol.py
resources/: default_mapping.yml
sessions/: __init__.py  session_manager.py  session_protocol.py  sessions.py
src/: __init__.py  control.py  main.py  sessions.py  tray_icon.py  utils.py  volume_thread.py
src/config/: config_exceptions.py  config_manager.py  config_schema.py  config_validator.py
src/core/: tray_icon.py  volume_thread.py
src/mapping/: mapping_manager.py  mapping_protocol.py
src/microcontroller/: __init__.py  microcontroller_manager.py
src/sessions/: session_manager.py  session_protocol.py  sessions.py
src/ui/: error_dialog.py  info_dialog.py  listing_dialog.py  mapping_dialog.py  welcome_dialog.py
src/utils/: logger.py
test/: conftest.py  test_config_manager.py  test_microcontroller_manager.py
test/config/: test_config_manager.py
test/mapping/: test_mapping_manager.py
test/microcontroller/: test_microcontroller_manager.py
test/sessions/: test_session_manager.py
utils/: utils.py
